--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="uk">
 <head>
   <meta charset="UTF-8">
-  <title>Мій сайт</title>
+  <title>Перехід</title>
+  <meta http-equiv="refresh" content="0; url=page1.html">
 </head>
 <body>
-  <h1>Ласкаво просимо на мій сайт!</h1>
-  <p>GitHub Pages працює!</p>
+  <p>Якщо перенаправлення не спрацювало, натисніть <a href="page1.html">тут</a>.</p>
 </body>
 </html>
