--- a/page4.html
+++ b/page4.html
@@ -47,7 +47,7 @@
 
     <div class="right">
       <ul class="menu">
-        <li><a href="page1.html">Що таке EQ?</a></li>
+        <li><a href="index.html">Що таке EQ?</a></li>
         <li><a href="page2.html">Складові</a></li>
         <li><a href="page3.html">Дослідники та їх праці EQ</a></li>
         <li><a href="page4.html">Роль у житті</a></li>
