--- a/page2.html
+++ b/page2.html
@@ -20,28 +20,13 @@
               «Щоб зрозуміти інших — почни з себе»
             </blockquote>
             <img src="images/second_image.jpg" alt="Мозок" usemap="#ei-map">
-
-<map name="ei-map">
-  <!-- Motivation (жовтий, верх-ліво) -->
-  <area shape="rect" coords="0,0,120,130"
-        href="https://uk.wikipedia.org/wiki/Мотивація" alt="Motivation" target="_blank">
-
-  <area shape="rect" coords="140,0,300,130"
-        href="https://uk.wikipedia.org/wiki/Самосвідомість" alt="Self-Awarness" target="_blank">
-
- <area shape="rect" coords="0,135,120,200"
-        href="https://uk.wikipedia.org/wiki/Соціально-комунікативні_навички" alt="Social skills" target="_blank">
-
-<area shape="rect" coords="140,135,300,200"
-        href="https://uk.wikipedia.org/wiki/Саморегуляція" alt="Social skills" target="_blank">
-
-<area shape="rect" coords="0,204,300,280"
-        href="https://uk.wikipedia.org/wiki/Емпатія" alt="Social skills" target="_blank">
-
-
-</map>
-
-
+            <map name="ei-map">
+               <area shape="rect" coords="0,0,120,130" href="https://uk.wikipedia.org/wiki/Мотивація" alt="Motivation" target="_blank">
+               <area shape="rect" coords="140,0,300,130" href="https://uk.wikipedia.org/wiki/Самосвідомість" alt="Self-Awarness" target="_blank">
+               <area shape="rect" coords="0,135,120,200" href="https://uk.wikipedia.org/wiki/Соціально-комунікативні_навички" alt="Social skills" target="_blank">
+               <area shape="rect" coords="140,135,300,200" href="https://uk.wikipedia.org/wiki/Саморегуляція" alt="Social skills" target="_blank">
+               <area shape="rect" coords="0,204,300,280" href="https://uk.wikipedia.org/wiki/Емпатія" alt="Social skills" target="_blank">
+           </map>
           </div>
         </div>
 
